# kubes-cd-sidecar

./: Cargo.toml  Dockerfile
.kubes-cd/: pipeline.yml
src/: main.rs
src/client/: mod.rs
