[package]
name = "kubes-sidecar"
version = "0.1.0"
authors = ["Jordan Holland <jordan.holland@rea-group.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
kube = "0.31.0"
kube-derive = "0.31.0"
k8s-openapi = { version = "0.7.1", default-features = false, features = ["v1_15"] }
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.10", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
